# nejla-common

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  Dockerfile  Files.md  LICENSE  Makefile  README.md  Taskfile.yaml  docker-compose.tests.yaml  flake.nix  floskell.json  fourmolu.yaml  hie.yaml  nejla-common.cabal  package.yaml  shell.nix  stack.lts16.yaml  stack.lts17.yaml  stack.lts18.yaml  stack.lts19.yaml  stack.lts22.yaml  stack.yaml
doc/: Migrations.md
documentation/: README.md  Upload.md
documentation/servant-example/: .dir-locals.el  README.md  package.yaml  stack.yaml
documentation/servant-example/src/: App.hs  Kitteh.hs
documentation/servant-example/test/: KittehSpec.hs
documentation/servant-integration/: CHANGELOG.md  Makefile  README.md  package.yaml
documentation/servant-integration/app/: Main.hs
documentation/servant-integration/src/: RestExample.hs  ServantApi.hs
documentation/servant-integration/test-suite/: Main.hs
documentation/testing/: .dir-locals.el  Tasty.hs  package.yaml  stack.yaml  testing.cabal
documentation/testing/src/: Lib.hs  Persistent.hs
documentation/testing/test/: Framework.hs  QCExamples.hs  UnitTest.hs
elk/: README.md  docker-compose.yaml
elk/logstash/: Dockerfile
elk/logstash.conf.d/: 1-input-gelf.conf  3-filter-geopip.conf  4-output-elasticsearch.conf
nuxt-template-files/: .eslintrc.json  .gitlab-ci.yml  Dockerfile  jsconfig.json  nuxt.config.js
nuxt-template-files/assets/: main.scss
nuxt-template-files/middleware/: authenticated.js
nuxt-template-files/nginx/: auth-service.include  nginx.conf
nuxt-template-files/pages/: sign-in.vue
nuxt-template-files/plugins/: axios.js  vee-validate.js
nuxt-template-files/store/: actions.js
source/: NejlaCommon.hs
source/NejlaCommon/: Config.hs  Helpers.hs  Logging.hs  Persistence.hs  Sendmail.hs  Test.hs  Wai.hs
source/NejlaCommon/Persistence/: Compat.hs  Migration.hs  SqlStatistics.hs  Util.hs
source/NejlaCommon/Persistence/sql/: initialize_versioning.sql
source/NejlaCommon/Test/: Logging.hs  Postgres.hs
src/: NejlaCommon.hs
src/NejlaCommon/: Component.hs  Config.hs  Helpers.hs  JSON.hs  Logging.hs  OpenApi.hs  Orphans.hs  Persistence.hs  Sendmail.hs  Test.hs  Wai.hs
src/NejlaCommon/OpenApi/: Nullable.hs  Operation.hs
src/NejlaCommon/Persistence/: Compat.hs  Migration.hs  SqlStatistics.hs  Util.hs
src/NejlaCommon/Persistence/Migration/: CLI.hs
src/NejlaCommon/Persistence/sql/: initialize_versioning.sql  meta_versioning.sql  old_schema_versioning.sql
src/NejlaCommon/Test/: Expectation.hs  Json.hs  Logging.hs  Postgres.hs
tests/: Config.hs  Helpers.hs  JSON.hs  Logging.hs  Logstash.hs  Persistent.hs  Test.hs
tests/Persistent/: Common.hs  DelayedIO.hs  Migrations.hs  Serializable.hs
tests/logstash/: docker-compose.yaml
tests/logstash/conf.d/: 1-input-stdin.conf  2-filter-parse-logs.conf  3-output-stdout.conf
