name:               nejla-common
version:            0.0.1.0
synopsis:           Common functionality for Nejla Reference Architecture applications
description:        Common functionality for Nejla Reference Architecture applications.
homepage:           https://github.com/nejla/nejla-common
license:            BSD3
license-file:       LICENSE
maintainer:         info@nejla.com
copyright:          Nejla AB, 2014-2017
category:           Development
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  exposed-modules:  NejlaCommon
                  , NejlaCommon.Config
                  , NejlaCommon.Helpers
                  , NejlaCommon.Test
  other-modules:    NejlaCommon.Logging
                  , NejlaCommon.Persistence
                  , NejlaCommon.Wai
  build-depends:    base >=4.7 && <5.0
                  , aeson
                  , binary
                  , bytestring
                  , case-insensitive >= 1.2
                  , configurator
                  , data-default
                  , esqueleto
                  , exceptions >= 0.8
                  , fast-logger
                  , generic-aeson
                  , hspec
                  , hspec-wai
                  , hspec-wai-json
                  , http-api-data >= 0.3.1
                  , http-types >= 0.9
                  , HUnit
-- https://github.com/aslatter/uuid/issues/19
                  , json-schema
                  , lens
                  , monad-control
                  , monad-logger
                  , mtl >= 2.2
                  , path-pieces
                  , persistent
                  , persistent-postgresql
                  , persistent-template
                  , postgresql-simple
                  , random
                  , random-shuffle
                  , resourcet
                  , rest-types
                  , singletons >= 1.1
                  , template-haskell >= 2.11
                  , text
                  , time >= 1.5
                  , transformers
                  , transformers-base
                  , unordered-containers
                  , uuid
                  , wai
                  , wai-extra
  hs-source-dirs:   source
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Test.hs
  other-modules:  Logging
                , Logstash
                , Persistent.Common
                , Persistent.Serializable
                , Helpers
                , Config
  build-depends:  HUnit
                , QuickCheck
                , aeson
                , async
                , base
                , bytestring
                , configurator
                , data-default
                , esqueleto
                , fast-logger
                , formatting
                , hspec-expectations
                , lens
                , monad-control
                , monad-logger
                , mtl
                , nejla-common
                , persistent
                , persistent-postgresql
                , persistent-template
                , postgresql-simple
                , shelly
                , singletons
                , tasty
                , tasty-hunit
                , tasty-quickcheck
                , tasty-th
                , temporary
                , text
                , time
                , unordered-containers

  ghc-options: -threaded
